Adicionando as mudanças do site

--- a/cursos.html
+++ b/cursos.html
@@ -7,35 +7,101 @@
 	<meta name="description" content="Os melhores cursos EAD de programação gratuito com certificado.">
 	<meta name="author" content="Marcio alemão"> 
 	<title>Web Desenvolvedor</title>
+	<link rel="shortcut icon" type="image/x-icon" href="svg/web.svg">
 	<link rel="stylesheet" href="css/materialize.min.css">
 	<link rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-	<nav class="home">
-		<div class="nav-wrapper">
-				<a href="#" class="espaco brand-logo red-text ">Web Desenvolvedor</a>
-			<ul class="right  hide-on-med-and-down">
-				<li><a href="#">Home</a></li>
-				<li><a href="#">Cursos</a></li>
-				<li><a href="#">Sobre nós</a></li>
-				<li class="butao-cdt"><a href="#" >cadastre-se<i class="small material-icons right ">create</i></a></li>
-			</ul>
-		</div>
-	</nav>
-	<div class="slide-carrosel">
-	  <div class="carousel carousel-slider">
-	    <a class="carousel-item" href="#one!"><img src="img/web-designer.jpg"></a>
-	    <a class="carousel-item" href="#two!"><img src="img/lenguage.jpg"></a>
-	    <a class="carousel-item" href="#three!"><img src="img/computer.jpg"></a>
-	  </div>
-    </div> 
-     <footer class="page-footer">
+	<div class="navbar-fixed">
+		<nav class="home">
+			<div class="nav-wrapper">
+					<a href="index.html" class="espaco brand-logo red-text "><img src="svg/web2.svg"/> Developer Web</a>
+				<ul class="right  hide-on-med-and-down">
+					<li><a href="index.html">Home</a></li>
+					<li><a href="cursos.html">Cursos</a></li>
+					<li><a href="#">Sobre nós</a></li>
+					<li class="butao-cdt"><a href="cadastro.html" >cadastre-se<i class="small material-icons right ">create</i></a></li>
+				</ul>
+			</div>
+		</nav>
+	</div>
+	<div class="cards">
+		<ul>
+			<li>
+			   <div class="card z-depth-3">
+				    <div class="card-image waves-effect waves-block waves-light">
+				      <img class="activator" src="img/html-css.png">
+				      <span class="card-title activator grey-text black-text ">Curso de HTML e CSS</span>
+				    </div>
+				    <div class="card-content">
+				      <a href="cadastro.html" class="btn btn-large waves-effect waves-light "><i class="material-icons small">card_giftcard</i> Gratis</a>
+				    </div>
+				</div>
+				<!-- card 2 -->
+				<div class="card z-depth-3">
+				    <div class="card-image waves-effect waves-block waves-light">
+				      <img class="activator" src="img/js.jpg">
+				      <span class="card-title activator white-text ">Curso JavaScript</span>
+				    </div>
+				    <div class="card-content">
+				      <a href="cadastro.html" class="btn btn-large waves-effect waves-light"><i class="material-icons small">card_giftcard</i> Gratis</a>
+				    </div>
+				</div>
+				<!-- card 3 -->
+				<div class="card z-depth-3">
+				    <div class="card-image waves-effect waves-block waves-light">
+				      <img class="activator" src="img/php.png">
+				      <span class="card-title activator white-text">Curso de PHP</span>
+				    </div>
+				    <div class="card-content">
+				      <a href="cadastro.html" class="btn btn-large waves-effect waves-light"><i class="material-icons small">card_giftcard</i> Gratis</a>
+				    </div>
+				</div>
+			</li>
+				<!-- card 4 -->
+			<li>
+				<div class="card z-depth-3">
+				    <div class="card-image waves-effect waves-block waves-light">
+				      <img class="activator" src="img/developer.png">
+				      <span class="card-title activator grey-text text-darken-4">Curso de python, c#  e c++</span>
+				    </div>
+				    <div class="card-content">
+				    	<span class="card-title  red-text">$100,00 </span>
+				      <a href="cadastro.html" class="btn btn-large waves-effect waves-light"><i class="material-icons small">shopping_cart</i> Comprar</a>
+				    </div>
+				</div>
+				<!-- card 5 -->
+				<div class="card z-depth-3">
+				    <div class="card-image waves-effect waves-block waves-light">
+				      <img class="activator" src="img/framework.png">
+				      <span class="card-title activator grey-text text-darken-4">Curso completo de Frameworks</span>
+				    </div>
+				    <div class="card-content">
+				    	<span class="card-title  red-text">$50,00 </span>
+				      <a href="cadastro.html" class="btn btn-large waves-effect waves-light"><i class="material-icons small">shopping_cart</i> Comprar</a>
+				    </div>
+				</div>
+				<!-- card 6 -->
+				<div class="card z-depth-3">
+				    <div class="card-image waves-effect waves-block waves-light">
+				      <img class="activator" src="img/cell.jpg">
+				      <span class="card-title activator white-text">Curso Mobile completo</span>
+				    </div>
+				    <div class="card-content">
+				    	<span class="card-title  red-text">$50,00 </span>
+				      <a href="cadastro.html" class="btn btn-large waves-effect waves-light"><i class="material-icons small">shopping_cart</i> Comprar</a>
+				    </div>
+				</div>
+			</li>
+		</ul>
+	</div>
+	<footer class="page-footer">
           <div class="container">
             <div class="row">
               <div class="col l6 s9">
-                <h5 class="white-text">Web desenvolvimento</h5>
-                <p class="grey-text text-lighten-4">.</p>
+                <h5 class="text-footer white-text"><img src="svg/web2.svg"/> Developer Web</h5>
+                <p class="grey-text text-lighten-4"></p>
               </div>
               <div class="col l4 offset-l2 s12">
                 <h5 class="white-text">Contatos</h5>
@@ -50,11 +116,11 @@
           </div>
           <div class="footer-copyright">
             <div class="container">
-            ©2019 Web Desenvolvedor
+            ©2019 Developer Web
             <a class="grey-text text-lighten-4 right" href="#!">Etec de itaquaquecetuba</a>
             </div>
           </div>
-        </footer>
+     </footer>
 	<!--jaquery-->
 	<script src="js/jquery.js"></script>
 	<!--javaScript materialize -->
