--- a/index.html
+++ b/index.html
@@ -7,26 +7,31 @@
 	<meta name="description" content="Os melhores cursos EAD de programação gratuito com certificado.">
 	<meta name="author" content="Marcio alemão"> 
 	<title>Web Desenvolvedor</title>
+	<link rel="shortcut icon" type="image/x-icon" href="svg/web.svg">
 	<link rel="stylesheet" href="css/materialize.min.css">
 	<link rel="stylesheet" href="css/style.css">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-	<nav class="home">
-		<div class="nav-wrapper">
-				<a href="#" class="espaco brand-logo red-text ">Web Desenvolvedor</a>
-			<ul class="right  hide-on-med-and-down">
-				<li><a href="#">Home</a></li>
-				<li><a href="#">Cursos</a></li>
-				<li><a href="#">Sobre nós</a></li>
-				<li class="butao-cdt"><a href="#" >cadastre-se<i class="small material-icons right ">create</i></a></li>
-			</ul>
-		</div>
-	</nav>
+	<div class="navbar-fixed">
+		<nav class="home">
+			<div class="nav-wrapper">
+					<a href="index.html" class="espaco brand-logo red-text "><img src="svg/web2.svg"/> Developer Web</a>
+				<ul class="right  hide-on-med-and-down">
+					<li><a href="index.html">Home</a></li>
+					<li><a href="cursos.html">Cursos</a></li>
+					<li><a href="#">Sobre nós</a></li>
+					<li class="butao-cdt"><a href="cadastro.html" >cadastre-se<i class="small material-icons right ">create</i></a></li>
+				</ul>
+			</div>
+		</nav>
+	</div>
 	<div id="principal">
 		<div class="row">
-			<div class=" caixa-text col l4 s6">
-				<p>Conheça os cursos da <em>Web Desenvolvedor</em></p>
+			<div class=" col l4 s6">
+				<div class="caixa-text col s8">
+				<p>Domine a web com os melhores cursos na <span>Developer Web</span>, um dos fatores  de importância para as empresas. </p>
+				</div>
 			</div>
 			<div class="caixa-img col  s6">
 				<img class="img-desen responsive-img" src="img/desen.jpg"/>
@@ -35,17 +40,17 @@
 	</div>
 	<div class="slide-carrosel">
 	  <div class="carousel carousel-slider">
-	    <a class="carousel-item" href="#one!"><img src="img/web-designer.jpg"></a>
-	    <a class="carousel-item" href="#two!"><img src="img/lenguage.jpg"></a>
-	    <a class="carousel-item" href="#three!"><img src="img/computer.jpg"></a>
+	    <a class="carousel-item" href="#one!"><img id="um" src="img/web-designer.jpg"></a>
+	    <a class="carousel-item" href="#two!"><img id="dois" src="img/lenguage.jpg"></a>
+	    <a class="carousel-item" href="#three!"><img id="tres" src="img/computer.jpg"></a>
 	  </div>
     </div> 
      <footer class="page-footer">
           <div class="container">
             <div class="row">
               <div class="col l6 s9">
-                <h5 class="white-text">Web desenvolvimento</h5>
-                <p class="grey-text text-lighten-4">.</p>
+                <h5 class="text-footer white-text"><img src="svg/web2.svg"/> Developer Web</h5>
+                <p class="grey-text text-lighten-4"></p>
               </div>
               <div class="col l4 offset-l2 s12">
                 <h5 class="white-text">Contatos</h5>
@@ -60,7 +65,7 @@
           </div>
           <div class="footer-copyright">
             <div class="container">
-            ©2019 Web Desenvolvedor
+            ©2019 Developer Web
             <a class="grey-text text-lighten-4 right" href="#!">Etec de itaquaquecetuba</a>
             </div>
           </div>
