Adicionando as mudanças

--- a/cursos.html
+++ b/cursos.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="ie-edge">
 	<meta name="description" content="Os melhores cursos EAD de programação gratuito com certificado.">
 	<meta name="author" content="Marcio alemão"> 
-	<title>Web Desenvolvedor</title>
+	<title>Web Developer</title>
 	<link rel="shortcut icon" type="image/x-icon" href="svg/web.svg">
 	<link rel="stylesheet" href="css/materialize.min.css">
 	<link rel="stylesheet" href="css/style.css">
@@ -16,11 +16,11 @@
 	<div class="navbar-fixed">
 		<nav class="home">
 			<div class="nav-wrapper">
-					<a href="index.html" class="espaco brand-logo red-text "><img src="svg/web2.svg"/> Developer Web</a>
+					<a href="index.html" class="espaco brand-logo red-text "><img src="svg/web2.svg"/> Web Developer</a>
 				<ul class="right  hide-on-med-and-down">
 					<li><a href="index.html">Home</a></li>
 					<li><a href="cursos.html">Cursos</a></li>
-					<li><a href="#">Sobre nós</a></li>
+					<li><a href="https://www.intelectua.com.br/blog/o-que-e-desenvolvimento-web" target="_blanck">Saiba mais</a></li>
 					<li class="butao-cdt"><a href="cadastro.html" >cadastre-se<i class="small material-icons right ">create</i></a></li>
 				</ul>
 			</div>
@@ -100,23 +100,28 @@
           <div class="container">
             <div class="row">
               <div class="col l6 s9">
-                <h5 class="text-footer white-text"><img src="svg/web2.svg"/> Developer Web</h5>
-                <p class="grey-text text-lighten-4"></p>
+                <h5 class="text-footer white-text"><img src="svg/web2.svg"/> Web Developer</h5>
+                <ul>
+	                <p class="grey-text text-lighten-4">Dúvidas ou sujestões,quer da seu feedback entre contato com a gente.</p>
+	                <p class="grey-text text-lighten-4">(11) 4750-5032</p>
+	                  <li><a class="grey-text text-lighten-3" href="#"><img src="svg/email.svg"/><span>E-mail</span> </a></li>
+	            </ul>
               </div>
               <div class="col l4 offset-l2 s12">
                 <h5 class="white-text">Contatos</h5>
                 <ul>
-                  <li><a class="grey-text text-lighten-3" href="https://br.freepik.com/">Conheça o site Freepik</a></li>
+                  <li><a class="yellow-text" href="https://br.freepik.com/">Conheça o site Freepik</a></li>
+                  <p class="grey-text text-lighten-4">Siga-nos pelas redes sociais.</p>
                   <li><a class="grey-text text-lighten-3" href="#"><img src="svg/facebook.svg"/><span>Facebook</span> </a></li>
                   <li><a class="grey-text text-lighten-3" href="#"><img src="svg/twitter.svg"/> <span>Twiter</span> </a></li>
-                  <li><a class="grey-text text-lighten-3" href="#"><img src="svg/email.svg"/><span>E-mail</span> </a></li>
+                  <li><a class="grey-text text-lighten-3" href="#"><img src="svg/instagram.svg"/> <span>Instagram</span> </a></li>
                 </ul>
               </div>
             </div>
           </div>
           <div class="footer-copyright">
             <div class="container">
-            ©2019 Developer Web
+            ©2019 Web Developer
             <a class="grey-text text-lighten-4 right" href="#!">Etec de itaquaquecetuba</a>
             </div>
           </div>
