--- a/cadastro.html
+++ b/cadastro.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="ie-edge">
 	<meta name="description" content="Os melhores cursos EAD de programação gratuito com certificado.">
 	<meta name="author" content="Marcio alemão"> 
-	<title>Web Desenvolvedor</title>
+	<title>Web Developer</title>
 	<link rel="shortcut icon" type="image/x-icon" href="svg/web.svg">
 	<link rel="stylesheet" href="css/materialize.min.css">
 	<link rel="stylesheet" href="css/style.css">
@@ -16,37 +16,110 @@
 	<div class="navbar-fixed">
 		<nav class="home">
 			<div class="nav-wrapper">
-					<a href="index.html" class="espaco brand-logo red-text "><img src="svg/web2.svg"/> Developer Web</a>
+					<a href="index.html" class="espaco brand-logo red-text "><img src="svg/web2.svg"/> Web Developer</a>
 				<ul class="right  hide-on-med-and-down">
 					<li><a href="index.html">Home</a></li>
 					<li><a href="cursos.html">Cursos</a></li>
-					<li><a href="#">Sobre nós</a></li>
+					<li><a href="https://www.intelectua.com.br/blog/o-que-e-desenvolvimento-web" target="_blanck">Saiba mais</a></li>
 					<li class="butao-cdt"><a href="cadastro.html" >cadastre-se<i class="small material-icons right ">create</i></a></li>
 				</ul>
 			</div>
 		</nav>
 	</div>
+	<div class="row">
+		<form action="" method="" class="form col s8">
+			<div class="row">
+				<div class="input-field col s4">
+					<input type="text" id="name" name="nome" maxlength="12"/>
+					<label for="name" class="black-text">Nome completo:</label>
+				</div>
+				<div class="input-field col s4">
+					<input type="email" name="email" id="e-mail" class="validate" placeholder="usuario@enderoço.com" autocomplete required/>
+					<label for="e-mail" data-error="E-mail Inválido" class="black-text"><span class="required">*</span>E-mail:</label>
+				</div>
+			</div>
+			<div class="row">
+				<div class="input-field col s4">
+					<input type="text" name="cpf" id="cpf" class="validate" pattern="\d{3}\.\d{3}\.\d{3}-\d{2}" maxlength="12" required/>
+					<label for="cpf" class="black-text"><span class="required">*</span>Digite o CPF:</label>
+				</div>
+				<div class=" input-field col s4">
+					<select name="estado" id="est">
+					      <option value="" disabled selected>Escola uma opção</option>
+					      <option value="1">São paulo</option>
+					      <option value="2">Option 2</option>
+					      <option value="3">Option 3</option>
+					      <option value="3">Option 3</option>
+					      <option value="3">Option 3</option>
+					      <option value="3">Option 3</option>
+					      <option value="3">Option 3</option>
+					      <option value="3">Option 3</option>
+					      <option value="3">Option 3</option>
+					      <option value="3">Option 3</option>
+					      <option value="3">Option 3</option>
+					      <option value="3">Option 3</option>
+					      <option value="3">Option 3</option>
+					      <option value="3">Option 3</option>
+				    </select>
+				    <label for="est" class="black-text"><span class="required">*</span>Estado:</label>
+				</div>
+			</div>
+			<div class="row">
+				<div class="input-field col s5">
+					<input type="text" name="endereco" id="ende" placeholder="Cidade Rua... n°" required/>
+					<label for="ende" class="black-text"><span class="required">*</span>Endereço:</label>
+				</div>		
+			</div>
+			<div class="row">
+				<div class="input-field col s5">
+					<input type="password" id="senha" name="senha" data-lenght="10" title="No maximo 10 caracteres" maxlength="10" title="Dica: A senha deve conter numeros, letras e cacteres" required/>
+					<i class="material-icons ">visibility</i>
+					<label for="senha" class="black-text"><span class="required">*</span>Senha:</label>
+				</div>
+			</div>
+			<div class="row">
+				<p>
+			      <label>
+			        <input type="checkbox" class="filled-in" checked="checked" />
+			        <span>Confirmo o registro</span>
+			      </label>
+			    </p>
+			    <p>
+			      <label>
+			        <input id="indeterminate-checkbox" type="checkbox" />
+			        <span>Aceito os termos de serviços</span>
+			      </label>
+			    </p>
+			</div>
+		</form>
+	</div>
 	<footer class="page-footer">
           <div class="container">
             <div class="row">
               <div class="col l6 s9">
-                <h5 class="text-footer white-text"><img src="svg/web2.svg"/> Developer Web</h5>
-                <p class="grey-text text-lighten-4"></p>
+                <h5 class="text-footer white-text"><img src="svg/web2.svg"/> Web Developer</h5>
+                <ul>
+	                <p class="grey-text text-lighten-4">Dúvidas ou sujestões,quer da seu feedback entre contato com a gente.</p>
+	                <p class="grey-text text-lighten-4">(11) 4750-5032</p>
+	                  <li><a class="grey-text text-lighten-3" href="#"><img src="svg/email.svg"/><span>E-mail</span> </a></li>
+	            </ul>
               </div>
               <div class="col l4 offset-l2 s12">
                 <h5 class="white-text">Contatos</h5>
                 <ul>
-                  <li><a class="grey-text text-lighten-3" href="https://br.freepik.com/">Conheça o site Freepik</a></li>
+                  <li><a class="yellow-text" href="https://br.freepik.com/">Conheça o site Freepik</a></li>
+                  <p class="grey-text text-lighten-4">Siga-nos pelas redes sociais.</p>
                   <li><a class="grey-text text-lighten-3" href="#"><img src="svg/facebook.svg"/><span>Facebook</span> </a></li>
                   <li><a class="grey-text text-lighten-3" href="#"><img src="svg/twitter.svg"/> <span>Twiter</span> </a></li>
-                  <li><a class="grey-text text-lighten-3" href="#"><img src="svg/email.svg"/><span>E-mail</span> </a></li>
+                  <li><a class="grey-text text-lighten-3" href="#"><img src="svg/instagram.svg"/> <span>Instagram</span> </a></li>
                 </ul>
               </div>
+            </div>
             </div>
           </div>
           <div class="footer-copyright">
             <div class="container">
-            ©2019 Developer Web
+            ©2019 Web Developer
             <a class="grey-text text-lighten-4 right" href="#!">Etec de itaquaquecetuba</a>
             </div>
           </div>
