--- a/cadastro.html
+++ b/cadastro.html
@@ -27,11 +27,11 @@
 		</nav>
 	</div>
 	<div id="for">
-		<div class="row">
+		<div class="row caix-row">
 			<form action="" method="" class="form col s5 right">
 				<div class="row">
 					<div class="input-field col s4">
-						<input type="text" id="name" name="nome" maxlength="12"/>
+						<input type="text" id="name" name="nome" maxlength="40"/>
 						<label for="name" class="black-text">Nome completo:</label>
 					</div>
 					<div class="input-field col s4">
@@ -41,40 +41,53 @@
 				</div>
 				<div class="row">
 					<div class="input-field col s4">
-						<input type="text" name="cpf" id="cpf" class="validate" pattern="\d{3}\.\d{3}\.\d{3}-\d{2}" maxlength="12" required/>
+						<input type="text" name="cpf" id="cpf" class="validate" pattern="\d{3}\.\d{3}\.\d{3}-\d{2}" maxlength="15" title="Dica: 123.456.789-22" required/>
 						<label for="cpf" class="black-text"><span class="required">*</span>Digite o CPF:</label>
 					</div>
 					<div class=" input-field col s4">
 						<select name="estado" id="est">
 						      <option value="" disabled selected>Escola uma opção</option>
-						      <option value="1">São paulo</option>
-						      <option value="2">Option 2</option>
-						      <option value="3">Option 3</option>
-						      <option value="3">Option 3</option>
-						      <option value="3">Option 3</option>
-						      <option value="3">Option 3</option>
-						      <option value="3">Option 3</option>
-						      <option value="3">Option 3</option>
-						      <option value="3">Option 3</option>
-						      <option value="3">Option 3</option>
-						      <option value="3">Option 3</option>
-						      <option value="3">Option 3</option>
-						      <option value="3">Option 3</option>
-						      <option value="3">Option 3</option>
+						      <option value="ac">Acre</option>
+						      <option value="al">Alagoas</option>
+						      <option value="ap">Amapá</option>
+						      <option value="am">Amazonas</option>
+						      <option value="ba">Bahia</option>
+						      <option value="ce">Ceará</option>
+						      <option value="df">Distrito Federal</option>
+						      <option value="es">Espírito Santo</option>
+						      <option value="go">Goiás</option>
+						      <option value="ma">Maranhão</option>
+						      <option value="mt">Mato Grosso</option>
+						      <option value="ms">Mato Grosso do Sul</option>
+						      <option value="mg">Minas Gerais</option>
+						      <option value="pa">Pará</option>
+						      <option value="pb">Paraíba</option>
+						      <option value="pr">Paraná</option>
+						      <option value="pe">Pernambuco</option>
+						      <option value="pi">Piauí</option>
+						      <option value="rj">Rio de Janeiro </option>
+						      <option value="rn">Rio Grande do Norte</option>
+						      <option value="rs">Rio Grande do Sul</option>
+						      <option value="ro">Rondônia</option>
+						      <option value="rr">Roraima</option>
+						      <option value="sc">Santa Catarina</option>
+						      <option value="sp">São paulo</option>
+						      <option value="se">Sergipe</option>
+						      <option value="to">Tocantins</option>
 					    </select>
 					    <label for="est" class="black-text"><span class="required">*</span>Estado:</label>
 					</div>
 				</div>
 				<div class="row">
 					<div class="input-field col s5">
-						<input type="text" name="endereco" id="ende" placeholder="Cidade Rua... n°" required/>
+						<input type="text" name="endereco" id="ende" placeholder="Cidade Rua... n°" class="validate" required/>
 						<label for="ende" class="black-text"><span class="required">*</span>Endereço:</label>
 					</div>		
 				</div>
 				<div class="row">
 					<div class="input-field col s5">
-						<input type="password" id="senha" name="senha" data-lenght="10" title="No maximo 10 caracteres" maxlength="10" title="Dica: A senha deve conter numeros, letras e cacteres" required/>
-						<i class="material-icons ">visibility</i>
+						<input type="password" id="senha" class="validate" name="senha" data-lenght="20" title="No maximo 20 caracteres" maxlength="20" title="Dica: A senha deve conter numeros, letras e cacteres" required/>
+						<i class="material-icons botao">visibility_off</i>
 						<label for="senha" class="black-text"><span class="required">*</span>Senha:</label>
 					</div>
 				</div>
@@ -91,7 +104,7 @@
 				        <span>Aceito os termos de serviços</span>
 				      </label>
 				    </p>
-				    <button class="btn center">Ok</button>
+				    <button class="btn center" value="Ok" >Ok</button>
 				</div>
 			</form>
 		</div>
@@ -104,17 +117,17 @@
                 <ul>
 	                <p class="grey-text text-lighten-4">Dúvidas ou sujestões,quer da seu feedback entre contato com a gente.</p>
 	                <p class="grey-text text-lighten-4">(11) 4750-5032</p>
-	                  <li><a class="grey-text text-lighten-3" href="#"><img src="svg/email.svg"/><span>E-mail</span> </a></li>
+	                  <li><a class="grey-text text-lighten-3" href="#!"><img src="svg/email.svg"/><span>E-mail</span> </a></li>
 	            </ul>
               </div>
               <div class="col l4 offset-l2 s12">
                 <h5 class="white-text">Contatos</h5>
                 <ul>
-                  <li><a class="yellow-text" href="https://br.freepik.com/">Conheça o site Freepik</a></li>
+                  <li><a class="yellow-text" href="https://br.freepik.com/" target="_blanck">Conheça o site Freepik</a></li>
                   <p class="grey-text text-lighten-4">Siga-nos pelas redes sociais.</p>
-                  <li><a class="grey-text text-lighten-3" href="#"><img src="svg/facebook.svg"/><span>Facebook</span> </a></li>
-                  <li><a class="grey-text text-lighten-3" href="#"><img src="svg/twitter.svg"/> <span>Twiter</span> </a></li>
-                  <li><a class="grey-text text-lighten-3" href="#"><img src="svg/instagram.svg"/> <span>Instagram</span> </a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!"><img src="svg/facebook.svg"/><span>Facebook</span> </a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!"><img src="svg/twitter.svg"/> <span>Twiter</span> </a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!"><img src="svg/instagram.svg"/> <span>Instagram</span> </a></li>
                 </ul>
               </div>
             </div>
@@ -123,7 +136,7 @@
           <div class="footer-copyright">
             <div class="container">
             ©2019 Web Developer
-            <a class="grey-text text-lighten-4 right" href="#!">Etec de itaquaquecetuba</a>
+            <a class="grey-text text-lighten-4 right">Etec de itaquaquecetuba</a>
             </div>
           </div>
      </footer>
