--- a/cursos.html
+++ b/cursos.html
@@ -104,17 +104,17 @@
                 <ul>
 	                <p class="grey-text text-lighten-4">Dúvidas ou sujestões,quer da seu feedback entre contato com a gente.</p>
 	                <p class="grey-text text-lighten-4">(11) 4750-5032</p>
-	                  <li><a class="grey-text text-lighten-3" href="#"><img src="svg/email.svg"/><span>E-mail</span> </a></li>
+	                  <li><a class="grey-text text-lighten-3" href="#!"><img src="svg/email.svg"/><span>E-mail</span> </a></li>
 	            </ul>
               </div>
               <div class="col l4 offset-l2 s12">
                 <h5 class="white-text">Contatos</h5>
                 <ul>
-                  <li><a class="yellow-text" href="https://br.freepik.com/">Conheça o site Freepik</a></li>
+                  <li><a class="yellow-text" href="https://br.freepik.com/" target="_blanck">Conheça o site Freepik</a></li>
                   <p class="grey-text text-lighten-4">Siga-nos pelas redes sociais.</p>
-                  <li><a class="grey-text text-lighten-3" href="#"><img src="svg/facebook.svg"/><span>Facebook</span> </a></li>
-                  <li><a class="grey-text text-lighten-3" href="#"><img src="svg/twitter.svg"/> <span>Twiter</span> </a></li>
-                  <li><a class="grey-text text-lighten-3" href="#"><img src="svg/instagram.svg"/> <span>Instagram</span> </a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!"><img src="svg/facebook.svg"/><span>Facebook</span> </a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!"><img src="svg/twitter.svg"/> <span>Twiter</span> </a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!"><img src="svg/instagram.svg"/> <span>Instagram</span> </a></li>
                 </ul>
               </div>
             </div>
